<resources>
    <string name="app_name">Namaz app</string>
    <string name="title_home">Home</string>
    <string name="vaktija_tab_title">Vaktija</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifikacije</string>
    <string name="dawn">Zora</string>
    <string name="sunrise">Izlaz sunca</string>
    <string name="noonPrayer">Podne</string>
    <string name="afternoonPrayer">Ikindija</string>
    <string name="sunsetPrayer">Aksam</string>
    <string name="nightPrayer">Jacija</string>
    <string name="morningPrayer">Sabah</string>
    <string name="tracking_tab_title">Namaz</string>
    <string name="prayed_prayers_stats">U izabranoj sedmici klanjali ste %1$d/%2$d namaza</string>
    <string name="prayed_today_stats">%1$d / 5</string>
    <string name="danas">Danas</string>
    <string name="congrats_gods_blessings">MasaAllah! \n Da Allah dž.š ukabuli</string>
    <string name="congrats_gods_blessings2">Da Allah dž.š ukabuli</string>
    <string name="congrats_gods_blessings3">"Doista je između čovjeka,  mnogoboštva i nevjerovanja ostavljanje namaza." (Muslim)</string>
    <string name="till_next_prayer">Do narednog namaza</string>
    <string name="dnevni_prikaz_aktivnosti">Dnevni prikaz aktivnosti</string>
    <string name="welcome_user">Dobro dosao %1$s</string>
    <string name="prayer_badge_text">Redovni klanjac %1$d uzastopnih dana</string>
    <string name="prayer_unlock_badge_text">Klanjaj %1$d uzastopni(h) dan(a) da otkljucas</string>
    <string name="prayer_badge_text_one_day">Ispunjen dnevni cilj (5 namaza)</string>
    <string name="profile">Profile</string>
    <string name="channel_name">Prayer notifications</string>
    <string name="channel_name_reminders">Prayer reminders</string>
    <string name="channel_description">Notifications about upcoming prayers</string>
    <string name="allow_disallow_notifications">Dozvoli / zabrani notifikacije</string>
    <string name="settings">Postavke</string>
    <string name="title_reminders">Podsjetnici</string>
    <string name="reminder_before_prayers">Podsjetnik prije namaza</string>
    <string name="news">Obavijesti</string>
    <string name="email_sms_chat">Email, SMS, Chat</string>
    <string name="share">Podijeli</string>
    <string name="social">Social</string>
    <string name="login">Prijava</string>
    <string name="google">Google</string>
    <string name="email">Email</string>
    <string name="app_description">Namaz app je aplikacija koja Vam omogućava da pratite I organizujete Vaš vjerski život.</string>
    <string name="registration">Registracija</string>
    <string name="choose_city">Izaberi grad</string>
    <string name="finish">Završi</string>
    <string name="next">Dalje</string>
    <string name="password">Šifra</string>
    <string name="name">Ime</string>
    <string name="email_not_valid">Email nije validan</string>
    <string name="empty_field">Prazno polje</string>
    <string name="minimum_three_characters">Minimalno tri slova</string>
    <string name="error_creating_user">Problem prilikom kreiranja racuna %1$s</string>
    <string name="birthday_year">Godina rođenja</string>
    <string-array name="reminder_times">
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string name="reminder_notification_text">Do %1$s je %2$d minuta. Jeste li obavili trenutni?</string>
    <string name="yes">Da</string>
    <string name="now">Sad ću</string>
    <string name="register">Registracija</string>
    <string name="text_welcome">AAA je aplikacija koja Vam omogućava da pratite I organizujete Vaš vjerski život.</string>
    <string name="logout">Odjava</string>
    <string name="O_broj">O</string>
    <string name="fab_des">fab</string>
    <string name="_od0_do5">0/5</string>
    <string name="sedmi_ni_prikaz_aktivnosti">Sedmični prikaz aktivnosti</string>
    <string name="_0_7_dana">0/7</string>
    <string name="P_dan">P</string>
    <string name="u_dan">U</string>
    <string name="sr_dan">S</string>
    <string name="c_dan">Č</string>
    <string name="p_dan">P</string>
    <string name="s_dan">S</string>
    <string name="n_Dan">N</string>
    <string name="mjese_ni_prikaz_obavljenih_namaza">Mjesečni prikaz obavljenih namaza</string>
    <string name="_150_namaza_mjesec">0/150</string>
    <string name="text_today">Danas</string>
</resources>