<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard_tab">

    <fragment
        android:id="@+id/navigation_prayer_tab"
        android:name="ba.aadil.namaz.ui.main.vaktija.HomeFragment"
        android:label="@string/vaktija_tab_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard_tab"
        android:name="ba.aadil.namaz.ui.main.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_tracking_tab"
        android:name="ba.aadil.namaz.ui.main.tracking.TrackingFragment"
        android:label="@string/tracking_tab_title"
        tools:layout="@layout/fragment_tracking" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="ba.aadil.namaz.ui.main.profile.ProfileFragment"
        android:label="@string/profile" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="ba.aadil.namaz.ui.main.settings.SettingsFragment"
        android:label="@string/settings" />
</navigation>